--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#cl">Campus life</a></li>
             <li><a href="#ac">Achievements</a></li>
             <li><a href="#wn">What's new</a></li>
-            <li><a href="#">Alumni</a></li>
+            <li><a href="#na">Alumni</a></li>
             <li><a href="#cu">Contact Us</a></li>
         </ul>
     </div>
@@ -46,7 +46,7 @@
             </div>
         </div>
     </div>
-    <div class="page-header" id="movies">
+    <div class="page-header" id="ac">
         <h2 class="text-capitalize">Achievements</h2>
     </div>
 
@@ -67,7 +67,7 @@
             <img src="m.JPG" class="img-responsive img-thumbnail">
         </div>
     </div>
-    <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="environment">
+    <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="wn">
         <h2 class="text-capitalize">What's new</h2>
     </div>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -77,7 +77,7 @@
                 the pupils of the Preparatory Department, catering to the requirements of boys of that age. This shall be
                 available shortly.</p>
             </div>
-            <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="environment">
+            <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="na">
                 <h2 class="text-capitalize">Notable Alumni</h2>
             </div>
     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 book" data-toggle="modal" data-target="#First"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGjzBwoKGZ1_diwJj1FqXfyzSRfFC-GforbaLE2rPYFTuBdzvl7xXQkqWTOMOB2LV49tc&usqp=CAU" class="img-responsive">
@@ -234,7 +234,7 @@
         </div>
     </div>
 </div>
-<div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="environment">
+<div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="cu">
     <h2 class="text-capitalize">Contact us</h2>
 </div>
     <section id="contact">
